# weather-data-eda

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda_weather.py
